k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    ingress.kubernetes.io/service-upstream: "true"
  name: poc-kong-service
spec:
  selector:
    app: poc-kong
  type: LoadBalancer
  ports:
    - name: poc-kong-service
      port: 80
      targetPort: 80
      protocol: TCP
