k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: poc-kong-api
  annotations:
    kubernetes.io/ingress.class: "kong"
    konghq.com/override: do-not-preserve-host
    konghq.com/plugins: key-auth-poc,rate-limit-free
spec:
  rules:
    - http:
        paths:
          - path: /webhook
            pathType: Prefix
            backend:
              service:
                name: poc-kong-service
                port:
                  number: 80
